# devmate

./: .dockerignore  .env.example  .gitignore  README.md  agent_logs.txt  main.py  pyproject.toml  simple_mcp_angent.py  说明.txt
agent/devMateAgent/: program_agent.py  simple_agent.py  simple_angetn.py  simple_mcp_angent.py  tempCodeRunnerFile.py
agent/prompts/: __init__.py  program_prompt.txt
backend/router/: ws_router.py
devmate/.vector_db/: index.pkl
devmate/agent/: program_agent.py
devmate/config/: agent_config.py  agent_pool.py
devmate/knowledge_base/: knows.md
devmate/prompts/: knowledge_prompts.txt  program_prompt.txt  search_summary_prompt.txt  unify_context_prompt.txt
devmate/rag/: ingest.py  retriever.py
docker/: Dockerfile  docker-compose.yml
hiking_trails/: README.md  main.py  pyproject.toml
hiking_trails/hiking_trails.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
hiking_trails/web/: main.html
hiking_trails/web/static/: hike.css  hike.js
knowledge_db/.vector_db/: index.faiss  index.pkl
knowledge_db/docs/: internal_fastapi_guidelines.md
knowledge_db/rag/: ingest.py  retriever.py  tempCodeRunnerFile.py
llm_web_process/hike_trails_website/: README.md  main.py  pyproject.toml  tt。txt
llm_web_process/hike_trails_website/web/: main.html
llm_web_process/hike_trails_website/web/static/: hike.css  hike.js
log/: logging_config.py
mcp_server/: McpClient.py  TavilyMcpServer.py  client.py  client_test.py  mcp_client.py  old_client.py  server.py  tavily_client.py  tavily_mcp_server.py  test.py  test_client.py
tools/: load_prompt.py
utils/: load_prompt.py  search_knowledge.py
web/router/: ws_router.py
web/static/: index.html
web/tools/: log.py
word/: checklist.md
