[project]
name = "hiking_trails"
version = "0.1.0"
description = "东莞徒步路线展示网站"
authors = [{name = "Hiking Trails Team", email = "info@dg-hiking.com"}]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "jinja2>=3.1.2"
]

[project.scripts]
start = "main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"